force-app/main/default/objects/Trail_Modulo__c/Trail_Modulo__c.object-meta.xml
<CustomObject>
    <label>Trail Modulo</label>
    <nameField>
        <label>Trail Modulo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trail Modulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>