force-app/main/default/objects/Trail_Modulo__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <label>Modulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>Trail Modulos</relationshipLabel>
    <relationshipName>Trail_Modulos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>