force-app/main/default/objects/Trail_Modulo__c/fields/Puntos__c.field-meta.xml
<CustomField>
    <fullName>Puntos__c</fullName>
    <formula>Modulo__r.Puntos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puntos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>