force-app/main/default/objects/Trail_Modulo__c/fields/Tiempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Estimado__c</fullName>
    <formula>Modulo__r.Tiempo_Estimado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>