force-app/main/default/objects/Trail_Modulo__c/fields/User_Trail__c.field-meta.xml
<CustomField>
    <fullName>User_Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Trail</label>
    <referenceTo>User_Trail__c</referenceTo>
    <relationshipLabel>Trail Modulos</relationshipLabel>
    <relationshipName>Trail_Modulos</relationshipName>
    <type>Lookup</type>
</CustomField>