force-app/main/default/objects/Trail_Modulo__c/validationRules/solo_modulos_activos_en_trail.validationRule-meta.xml
<ValidationRule>
    <fullName>solo_modulos_activos_en_trail</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Modulo__r.Active__c)</errorConditionFormula>
    <errorMessage>activa el modulo antes de agregarlo</errorMessage>
</ValidationRule>